--- a/new-jenkins/pom.xml
+++ b/new-jenkins/pom.xml
@@ -39,12 +39,12 @@
 						<muleVersion>${app.runtime}</muleVersion>
 						<username>divyaj</username>
 						<password>Vardhan@143</password>
-						<applicationName>jenkins-1</applicationName>
+						<applicationName>new-jenkins</applicationName>
 						<environment>Sandbox</environment>
 						<workerType>MICRO</workerType>
 						<properties>
 							
-							<http.port>8092</http.port>
+							<http.port>8089</http.port>
 						</properties>
 					</cloudHubDeployment>
 					<sharedLibraries>
